[package]
name = "commodity"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

[features]
default = ["serde-support"]
serde-support = ["serde", "serde_derive", "chrono/serde", "arrayvec/serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.3.0"
chrono = "0.4"
thiserror = "1.0"
iso4217 = "0.3"

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies.arrayvec]
version = "0.5"

[dependencies.serde_derive]
optional = true
version = "1.0"