[package]
name = "commodity"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

[features]
default = []
serde-support = ["serde", "serde_derive", "chrono/serde", "arrayvec/serde", "rust_decimal/serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
thiserror = "1.0"
iso4217 = "0.3"
serde = { version = "1.0", optional = true}
arrayvec = "0.5"
serde_derive = { version = "1.0", optional = true, features = ["derive"] }
rust_decimal = { version = "1.3.0", default-features = false }