[package]
name = "commodity"
version = "0.3.2"
description = "A library for representing commodities/currencies, and exchange rates/conversions between them."
keywords = ["financial", "fixed", "precision", "currency"]
categories = ["science", "mathematics"]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/kellpossible/commodity"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
serde-support = ["serde", "serde_derive", "chrono/serde", "arrayvec/serde", "rust_decimal/serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
thiserror = "1.0"
iso4217 = "0.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
arrayvec = "0.5"
serde_derive = { version = "1.0", optional = true}
rust_decimal = { version = "1", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0" } # for unit tests
doc-comment = "0.3"

[package.metadata.docs.rs]
features = ["serde-support"]